--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "craco-less": "^1.17.1",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^5.1.0",
+    "echarts-for-react": "^3.0.1",
     "html-to-draftjs": "^1.5.0",
     "jsonp": "^0.2.1",
     "pubsub-js": "^1.9.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
     "store": "^2.0.12",
     "web-vitals": "^1.0.1"
   },
